grammar.js
    source_file: $ => repeat($._source_element),

    _source_element: $ => choice(
      $.pragma_directive,
      $.import_directive,
      $.contract_declaration,
      $.interface_declaration,
      $.library_declaration,
      $.constant_variable_declaration,
      $.user_defined_value_type,
      $.error_declaration,
      $.event_declaration,
      $.function_definition,
      $.using_directive,
      $.struct_declaration,
      $.enum_declaration,
      // More elements will be added as we implement them
    ),

    // Pragma directives
    pragma_directive: $ => seq(
      'pragma',
      $.pragma_token,
      ';'
    ),

    pragma_token: $ => seq(
      field('name', $.pragma_name),
      field('value', $.pragma_value)
    ),

    pragma_name: $ => /[a-zA-Z][a-zA-Z0-9_-]*/,
    pragma_value: $ => /[^;]+/,

    // Import directives
    string_literal: $ => choice(
      seq('"', repeat(/[^"\\]|\\.|\\\r?\n/), '"'),
      seq("'", repeat(/[^'\\]|\\.|\\\r?\n/), "'")
    ),

    // Contract declarations
    contract_declaration: $ => seq(
      optional('abstract'),
      'contract',
      $.identifier,
      repeat($.inheritance_specifier),
      $.contract_body
    ),

    contract_body: $ => seq(
      '{',
      repeat($._contract_member),
      '}'
    ),

    _contract_member: $ => choice(
      $.state_variable_declaration,
      $.function_definition,
      $.constructor_definition,
      $.receive_definition,
      $.fallback_definition,
      $.modifier_definition,
      $.error_declaration,
      $.event_declaration,
      $.user_defined_value_type,
      $.using_directive,
      $.struct_declaration,
      $.enum_declaration,
      // More contract members will be added later
    ),

    // User-defined types (for inheritance and other uses)  
    user_defined_type: $ => prec.left(-2, dotSep1($.identifier)),

    // Call arguments (for constructor calls in inheritance)
    call_arguments: $ => seq(
      '(',
      commaSep($._expression),
      ')'
    ),

    // State variables and constants
    type_name: $ => choice(
      $.primitive_type,
      $.user_defined_type,
      $.array_type,
      prec(50, $.mapping_type)
    ),

    primitive_type: $ => choice(
      'bool',
      'string',
      prec(1, seq('address', 'payable')),
      'address',
      'bytes',
      /uint(8|16|24|32|40|48|56|64|72|80|88|96|104|112|120|128|136|144|152|160|168|176|184|192|200|208|216|224|232|240|248|256)?/,
      /int(8|16|24|32|40|48|56|64|72|80|88|96|104|112|120|128|136|144|152|160|168|176|184|192|200|208|216|224|232|240|248|256)?/,
      /bytes(1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31|32)/
    ),

    array_type: $ => prec.dynamic(2, prec.right(seq(
      choice($.primitive_type, $.user_defined_type),
      '[',
      optional($._expression),
      ']'
    ))),

    visibility: $ => choice(
      'public',
      'private',
      'internal',
      'external'
    ),

    state_mutability: $ => choice(
      'constant',
      'immutable',
      'pure',
      'view',
      'payable'
    ),

    storage_location: $ => choice(
      'memory',
      'storage',
      'calldata',
      'transient'
    ),

    // Function definitions
    function_definition: $ => seq(
      'function',
      $.identifier,
      $.parameter_list,
      repeat(choice(
        $.visibility,
        $.state_mutability,
        $.virtual_specifier,
        $.override_specifier,
        $.modifier_invocation
      )),
      optional($.return_type_definition),
      choice($.function_body, ';')
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')'
    ),

    parameter: $ => seq(
      $.type_name,
      optional($.storage_location),
      optional($.identifier)
    ),

    return_type_definition: $ => seq(
      'returns',
      $.parameter_list
    ),

    function_body: $ => seq(
      '{',
      repeat($._statement),
      '}'
    ),

    user_defined_value_type: $ => seq(
      'type',
      $.identifier,
      'is',
      $.type_name,
      ';'
    ),

    // Error declarations
    using_directive: $ => seq(
      'using',
      choice(
        $.using_list,
        $.user_defined_type
      ),
      'for',
      choice($.type_name, '*'),
      optional('global'),
      ';'
    ),

    using_list: $ => seq(
      '{',
      commaSep1($.using_function),
      '}'
    ),

    using_function: $ => seq(
      $.identifier,
      'as',
      $.operator
    ),

    operator: $ => choice(
      '+', '-', '*', '/', '%', '**',
      '==', '!=', '<', '<=', '>', '>=',
      '&', '|', '^', '~', '<<', '>>',
      '&&', '||', '!'
    ),

    // Struct declarations
    _statement: $ => choice(
      $.expression_statement,
      $.variable_declaration_statement,
      $.if_statement,
      $.for_statement,
      $.while_statement,
      $.do_while_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.emit_statement,
      $.revert_statement,
      $.try_statement,
      $.block_statement,
      $.unchecked_block,
      $.assembly_statement,
      $.placeholder_statement,
    ),

    expression_statement: $ => prec(1, seq($._expression, ';')),

    variable_declaration_statement: $ => prec(2, seq(
      choice(
        seq($.variable_declaration, optional(seq('=', $._expression))),
        seq($.variable_declaration_tuple, '=', $._expression)
      ),
      ';'
    )),


    variable_declaration: $ => seq(
      $.type_name,
      optional($.storage_location),
      $.identifier
    ),

    return_statement: $ => seq(
      'return',
      optional($._expression),
      ';'
    ),

    _expression: $ => choice(
      $.assignment_expression,
      $.augmented_assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.struct_expression,
      $.struct_literal,
      $.call_expression,
      $.member_expression,
      $.array_access,
      $.slice_access,
      $.new_expression,
      $.payable_expression,
      $.type_expression,
      $.parenthesized_expression,
      $.array_literal,
      $.tuple_literal,
      $.parenthesized_type,
      $._primary_expression
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      $._expression,
      '=',
      $._expression
    )),

    ternary_expression: $ => prec.left(PREC.TERNARY, seq(
      $._expression,
      '?',
      $._expression,
      ':',
      $._expression
    )),

    binary_expression: $ => choice(
      ...[
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['<', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['|', PREC.BITWISE_OR],
        ['^', PREC.BITWISE_XOR],
        ['&', PREC.BITWISE_AND],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADDITIVE],
        ['-', PREC.ADDITIVE],
        ['*', PREC.MULTIPLICATIVE],
        ['/', PREC.MULTIPLICATIVE],
        ['%', PREC.MULTIPLICATIVE],
        ['**', PREC.EXPONENTIAL],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          $._expression,
          operator,
          $._expression
        ))
      )
    ),

    unary_expression: $ => prec.left(PREC.UNARY, seq(
      choice('!', '~', '-', '+', 'delete'),
      $._expression
    )),

    update_expression: $ => choice(
      prec.left(PREC.POSTFIX, seq($._expression, choice('++', '--'))),
      prec.right(PREC.UNARY, seq(choice('++', '--'), $._expression))
    ),

    call_expression: $ => prec.left(PREC.CALL, seq(
      field("function", $._expression),
      choice(
        seq(field("options", $.call_options), field("arguments", $.call_arguments)),
        field("arguments", $.call_arguments)
      )
    )),

    call_options: $ => seq(
      '{',
      commaSep1($.call_option),
      '}'
    ),

    call_option: $ => seq(
      $.identifier,
      ':',
      $._expression
    ),

    member_expression: $ => prec.dynamic(1, seq(
      field('object', choice(
        $._expression,
        $.identifier,
      )),
      '.',
      field('property', $.identifier)
    )),

    array_access: $ => prec.left(PREC.MEMBER, seq(
      $._expression,
      '[',
      optional($._expression),
      ']'
    )),

    new_expression: $ => prec.left(PREC.CALL + 1, seq(
      'new',
      $.type_name,
      optional($.call_options),
      $.call_arguments
    )),

    struct_expression: $ => prec.dynamic(1, seq(
      $.identifier,
      '(',
      '{',
      commaSep($.struct_field_assignment),
      '}',
      ')'
    )),

    struct_field_assignment: $ => seq(
      $.identifier,
      ':',
      $._expression
    ),

    payable_expression: $ => prec(PREC.CALL + 1, seq(
      'payable',
      $.call_arguments
    )),

    type_expression: $ => seq(
      'type',
      '(',
      $.type_name,
      ')'
    ),

    parenthesized_expression: $ => prec(PREC.CALL + 1, seq(
      '(',
      $._expression,
      ')'
    )),

    array_literal: $ => seq(
      '[',
      commaSep($._expression),
      ']'
    ),

    // Literals
    boolean_literal: $ => choice('true', 'false'),

    number_literal: $ => seq(
      choice(
        /\d+(_?\d+)*(\.\d+(_?\d+)*)?([eE][+-]?\d+(_?\d+)*)?/,
        /\.\d+(_?\d+)*([eE][+-]?\d+(_?\d+)*)?/
      ),
      optional(choice(
        'wei', 'gwei', 'ether',
        'seconds', 'minutes', 'hours', 'days', 'weeks', 'years'
      ))
    ),


    hex_literal: $ => /0x[0-9A-Fa-f]+/,

    comment: $ => token(prec(PREC.COMMENT, choice(
      seq('//', /.*/),
      seq(
        '/*',
        repeat(choice(
          /[^*]+/,
          seq('*', /[^/]/)
        )),
        '*/'
      )
    ))),

    // Identifier (required for word token)
    identifier: $ => /[a-zA-Z_$][a-zA-Z0-9_$]*/,
  }
});

// Helper functions
function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)), optional(','));
}

function dotSep1(rule) {
  return seq(rule, repeat(seq('.', rule)));
}
